--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
 	        			<div class="hero">
 
-	        			<h1>Create Something</h1>
-						<h2>Quisque id tincidunt dui augue. Suspendisse non lorem vel diam consectetur posuere. Nam eu enim gravida risus vehicula posuere.</h2>
+	        			<h1>Complete Beehive Monitoring</h1>
+								<h2>Hive Empire - Know your Hive.</h2>
 
 						<a href="home-02.html#" class="btn btn-primary">Pricing</a> <a href="home-02.html#" class="btn btn-secondary">Documentation</a>
 
@@ -165,9 +165,8 @@
 
 	        		<span class="glyph-item mega icon-screen-desktop" aria-hidden="true"></span>
 
-		        	<h3>Responsive</h3>
-
-		        	<p>Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.</p>
+		        	<h3>Complete</h3>
+		        	<p>Temperature, Humidity, Video, Weight, In/Out Count.<br/><b>In touch &amp; in control</b><br/><em>Sensors that keep you n touch with your hive.</em></p>
 
 		        </div>
 
@@ -179,23 +178,10 @@
 
 	        		<span class="glyph-item mega icon-emoticon-smile" aria-hidden="true"></span>
 
-		        	<h3>Simple &amp; Easy</h3>
-
-		        	<p>Maecenas sollicitudin luctus neque at auctor sum lacinia. Phasellus conseodio vitae semper. </p>
-
-		        </div>
-
-	    	</div>
-
-	    	<div class="span3">
-
-	        	<div class="inner">
-
-	        		<span class="glyph-item mega icon-users" aria-hidden="true"></span>
-
-		        	<h3>Excellent Support</h3>
-
-		        	<p>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </p>
+		        	<h3>Simple</h3>
+		        	<p><b>1.</b> Place sensors.<br/>
+		        	<b>2.</b> Turn on the <em><b>HiveEmpireSense&#8482;</b></em>.<br/>
+		        	<b>3.</b> See your Hive, Know your Hive</p>
 
 		        </div>
 
@@ -207,13 +193,27 @@
 
 	        		<span class="glyph-item mega icon-screen-smartphone" aria-hidden="true"></span>
 
-		        	<h3>Mobile Friendly</h3>
-
-		        	<p>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </p>
+		        	<h3>Smart &amp; Fun</h3>
+		        	<p>Our Mobile and web app HiveEmpire&#8482;, gives you direct and simple access to the hive data and streaming video. HiveEmpire will let you know when important events are due and provide you with contact to people who know</p>
 
 		        </div>
 
 	    	</div>
+
+
+	    	<div class="span3">
+
+	        	<div class="inner">
+
+	        		<span class="glyph-item mega icon-users" aria-hidden="true"></span>
+
+		        	<h3>Excellent Support</h3>
+		        	<p>Access to experienced beekeepers forums and support for your Hive Sensors</p>
+
+		        </div>
+
+	    	</div>
+
 
 	    	<div class="clearfix"></div>
 
