--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
 					<!-- Start Menu -->
 					<div id="menu">
 						<ul>
-							<li><a href="http://demos.bornthemes.com/landingpages/conversion/index.html">Home</a></li>
-							<li><a href="http://demos.bornthemes.com/landingpages/conversion/templates/page.html">About</a></li>
-							<li><a href="http://demos.bornthemes.com/landingpages/conversion/templates/page.html">Blog</a></li>
-							<li><a href="http://demos.bornthemes.com/landingpages/conversion/templates/page.html">Pricing</a></li>
-							<li class="current"><a href="http://demos.bornthemes.com/landingpages/conversion/templates/page.html">Download App</a></li>
+							<li><a href="/">Home</a></li>
+							<li><a href="/about.html">About</a></li>
+							<li><a href="/blog/">Blog</a></li>
+							<li><a href="/index.html#buy">Buy <b>HiveEmpireSense&#8482;</b></a></li>
+							<li><a href="/index.html#pricing">Buy <b>HiveEmpireSense&#8482;</b></a></li>
+							<li class="current"><a href="">Download App</a></li>
 						</ul>
 					</div>
 					<!-- End Menu -->
@@ -75,10 +76,10 @@
 
 	        			<div class="hero">
 
-	        			<h1>Complete Beehive Monitoring</h1>
-								<h2>Hive Empire - Know your Hive.</h2>
+	        			<h1>Know your Hive</h1>
+								<h2>Hive Empire - Complete Beehive Monitoring.</h2>
 
-						<a href="home-02.html#" class="btn btn-primary">Pricing</a> <a href="home-02.html#" class="btn btn-secondary">Documentation</a>
+						<a href="#pricing" class="btn btn-primary">Pricing</a> <a href="/docs/" class="btn btn-secondary">Documentation</a>
 
 						</div>
 
@@ -233,7 +234,7 @@
 
 	        	<div class="inner inner-text">
 
-		        	<h2>Beautiful on <span>every device</span></h2>
+		        	<h2>Know <span>your Hive</span></h2>
 
 		        	<h4>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </h4>
 
@@ -281,7 +282,7 @@
 
 	        	<div class="inner inner-text">
 
-		        	<h2>Super easy to <span>customize</span></h2>
+		        	<h2>Connect <span>&amp; Engage</span></h2>
 
 		        	<h4>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </h4>
 
@@ -299,7 +300,47 @@
 
 </div>
 
-<div class="strip strip-alt pricing">
+
+<div class="strip highlight strip-alt">
+
+	<div class="container">
+
+        <div class="row">
+
+	    	<div class="span6">
+
+	        	<div class="inner inner-text">
+
+		        	<h2>Buy <span>HiveEmpireSense&#8482;</span></h2>
+
+		        	<h4>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </h4>
+
+		        	<p>Mauris vehicula tortor id augue rutrum consequat ac at massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus bibendum urna pellentesque urna ultrices porttitor. Sed ac leo id odio fringilla venenatis. Morbi vel turpis luctus diam ultrices adipiscing. Vestibulum feugiat suscipit tortor, sed hendrerit ipsum ultricies eu. </p>
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="span6">
+
+	        	<div class="inner">
+
+		        	<img src="pictures/desktop-inline.png" alt="Desktop" class="promoimg" />
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="clearfix"></div>
+
+	    </div>
+
+	</div>
+
+</div>
+
+
+<div class="strip strip-alt pricing" id="pricing">
 
 	<div class="container">
 
@@ -307,66 +348,64 @@
 		<div class="row blocks">
 
 			<div class="span4">
-
 		    	<div class="inner secondary">
-
 		    		<ul>
-						<li><h2>Basic</h2></li>
+						<li><h2>Starter Kit</h2></li>
+						<li class="price"><h1><span>$ </span><strong>150</strong><small><br/>1x HiveEmpireSense™ &amp; sensors<br/> 2 months free</small></h1></li>
+						<li>1x Temperature &amp; Humidity Sensor</li>
+						<li>4x Weight Sensors</li>
+						<li>1x In/Out Counter</li>
+						<li>1x Camera Sensor</li>
+						</ul>
+
+						<a href="home-02.html#" class="btn">Buy Now</a>
+		    	</div>
+		  </div>
+
+		</div>
+
+		<div class="row blocks">
+
+			<div class="span4">
+		    	<div class="inner secondary">
+		    		<ul>
+						<li><h2>Monthly Subscription</h2></li>
 						<li class="price"><h1><span>$ </span><strong>12</strong><small> per month</small></h1></li>
-						<li>10GB Monthly Bandwidth</li>
-						<li>5GB Disk Space</li>
-						<li>20 E-mail accounts</li>
-						<li>8 subdomains</li>
-						<li>24/24 Ultimated support</li>
-					</ul>
+						</ul>
 
-					<a href="home-02.html#" class="btn">Buy Now</a>
-
+						<a href="home-02.html#" class="btn">Buy Now</a>
 		    	</div>
-
-		    </div>
+		  </div>
 
 			<div class="span4">
-
-		    	<div class="inner primary">
-
-		    		<ul>
-						<li><h2>Premium</h2></li>
-						<li class="price"><h1><span>$ </span><strong>49</strong><small> per month</small></h1></li>
-						<li>10GB Monthly Bandwidth</li>
-						<li>5GB Disk Space</li>
-						<li>20 E-mail accounts</li>
-						<li>8 subdomains</li>
-						<li>24/24 Ultimated support</li>
-					</ul>
-
-					<a href="home-02.html#" class="btn">Buy Now</a>
-
-		    	</div>
-
-		    </div>
-
-			<div class="span4">
-
 		    	<div class="inner secondary">
 
 		    		<ul>
-						<li><h2>Standard</h2></li>
-						<li class="price"><h1><span>$ </span><strong>22</strong><small> per month</small></h1></li>
-						<li>10GB Monthly Bandwidth</li>
-						<li>5GB Disk Space</li>
-						<li>20 E-mail accounts</li>
-						<li>8 subdomains</li>
-						<li>24/24 Ultimated support</li>
-					</ul>
+						<li><h2>HiveEmpireSense™ Device</h2></li>
+						<li class="price"><h1><span>$ </span><strong>150</strong></h1></li>
+						<li>Power cable</li>
+						</ul>
 
-					<a href="home-02.html#" class="btn">Buy Now</a>
+						<a href="home-02.html#" class="btn">Buy Now</a>
 
 		    	</div>
+		  </div>
 
-		    </div>
+			<div class="span4">
+		    	<div class="inner secondary">
+		    		<ul>
+						<li><h2>Sensor Pack</h2></li>
+						<li class="price"><h1><span>$ </span><strong>80</strong><small></small></h1></li>
+						<li>1x Temperature &amp; Humidity Sensor</li>
+						<li>4x Weight Sensors</li>
+						<li>1x In/Out Counter</li>
+						<li>1x Camera Sensor</li>
+						</ul>
+						<a href="home-02.html#" class="btn">Buy Now</a>
+		    	</div>
+		  </div>
 
-		    <div class="clearfix"></div>
+		  <div class="clearfix"></div>
 
 		</div>
 
