--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
 
 		        	<h3>Simple</h3>
 		        	<p><b>1.</b> Place sensors.<br/>
-		        	<b>2.</b> Turn on the <em><b>HiveEmpireSense&#8482;</b></em>.<br/>
-		        	<b>3.</b> See your Hive, Know your Hive</p>
+		        	<b>2.</b> Turn on the <em><b>HiveEmpireSense&#8482;</b></em> and connect to the internet.<br/>
+		        	<b>3.</b> Know your Hive</p>
 
 		        </div>
 
