--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
 		    	<div class="inner secondary">
 		    		<ul>
 						<li><h2>Starter Kit</h2></li>
-						<li class="price"><h1><span>$ </span><strong>150</strong><small><br/>1x HiveEmpireSense™ &amp; sensors<br/> 2 months free</small></h1></li>
+						<li class="price"><h1><span>$ </span><strong>150</strong><small><br/>1x HiveEmpireSense™ &amp; sensors</small></h1></li>
+						<li>1 month free</li>
 						<li>1x Temperature &amp; Humidity Sensor</li>
 						<li>4x Weight Sensors</li>
 						<li>1x In/Out Counter</li>
