remved home refs

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<div class="row">
 				<div class="span12">
 
-					<h1><a href="home-02.html#"><img src="images/logo.png" alt="Convert" /></a></h1>
-					<h2 class="menulink"><a href="home-02.html#">Menu</a></h2>
+					<h1><a href="/"><img src="images/logo.png" alt="Convert" /></a></h1>
+					<h2 class="menulink"><a href="/">Menu</a></h2>
 
 					<!-- Start Menu -->
 					<div id="menu">
@@ -130,7 +130,7 @@
 								        <textarea name="message" id="message" required=""  placeholder="Message"></textarea>
 								    </div>
 									<div class="form-row">
-								        <input id="submit" type="submit" name="submit" value="Sign up now!" class="btn"> <a href="home-02.html#">Privacy Policy</a> | <a href="home-02.html#">Terms &amp; Conditions</a>
+								        <input id="submit" type="submit" name="submit" value="Sign up now!" class="btn"> <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a>
 								    </div>
 								</form>
 
@@ -359,7 +359,7 @@
 						<li>1x Camera Sensor</li>
 						</ul>
 
-						<a href="home-02.html#" class="btn">Buy Now</a>
+						<a href="/" class="btn">Buy Now</a>
 		    	</div>
 		  </div>
 
@@ -370,11 +370,11 @@
 			<div class="span4">
 		    	<div class="inner secondary">
 		    		<ul>
-						<li><h2>Monthly Subscription</h2></li>
+						<li><h2>App Access</h2></li>
 						<li class="price"><h1><span>$ </span><strong>12</strong><small> per month</small></h1></li>
 						</ul>
 
-						<a href="home-02.html#" class="btn">Buy Now</a>
+						<a href="/" class="btn">Buy Now</a>
 		    	</div>
 		  </div>
 
@@ -387,7 +387,7 @@
 						<li>Power cable</li>
 						</ul>
 
-						<a href="home-02.html#" class="btn">Buy Now</a>
+						<a href="/" class="btn">Buy Now</a>
 
 		    	</div>
 		  </div>
@@ -402,7 +402,7 @@
 						<li>1x In/Out Counter</li>
 						<li>1x Camera Sensor</li>
 						</ul>
-						<a href="home-02.html#" class="btn">Buy Now</a>
+						<a href="/" class="btn">Buy Now</a>
 		    	</div>
 		  </div>
 
@@ -419,12 +419,12 @@
 <div id="footer">
 
 	<p>
-		<a href="home-02.html#"><span class="glyph-item mega icon-social-youtube" aria-hidden="true"></span></a>
-		<a href="home-02.html#"><span class="glyph-item mega icon-social-twitter" aria-hidden="true"></span></a>
-		<a href="home-02.html#"><span class="glyph-item mega icon-social-tumblr" aria-hidden="true"></span></a>
-		<a href="home-02.html#"><span class="glyph-item mega icon-social-facebook" aria-hidden="true"></span></a>
-		<a href="home-02.html#"><span class="glyph-item mega icon-social-dropbox" aria-hidden="true"></span></a>
-		<a href="home-02.html#"><span class="glyph-item mega icon-social-dribbble" aria-hidden="true"></span></a>
+		<a href="/"><span class="glyph-item mega icon-social-youtube" aria-hidden="true"></span></a>
+		<a href="/"><span class="glyph-item mega icon-social-twitter" aria-hidden="true"></span></a>
+		<a href="/"><span class="glyph-item mega icon-social-tumblr" aria-hidden="true"></span></a>
+		<a href="/"><span class="glyph-item mega icon-social-facebook" aria-hidden="true"></span></a>
+		<a href="/"><span class="glyph-item mega icon-social-dropbox" aria-hidden="true"></span></a>
+		<a href="/"><span class="glyph-item mega icon-social-dribbble" aria-hidden="true"></span></a>
 	</p>
 
 	Copyright &copy; 2014
