--- a/index.html
+++ b/index.html
@@ -339,6 +339,43 @@
 
 </div>
 
+<div class="strip highlight">
+
+	<div class="container">
+
+        <div class="row">
+
+	    	<div class="span6">
+
+	        	<div class="inner">
+
+		        	<img src="pictures/mobile-inline.png" alt="Desktop" class="promoimg" />
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="span6">
+
+	        	<div class="inner inner-text">
+
+		        	<h2>Go <span>&amp; Global</span></h2>
+
+		        	<h4>Co-operative honey productiona nd supply to the world.</h4>
+
+		        	<p>Mauris vehicula tortor id augue rutrum consequat ac at massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus bibendum urna pellentesque urna ultrices porttitor. Sed ac leo id odio fringilla venenatis. Morbi vel turpis luctus diam ultrices adipiscing. Vestibulum feugiat suscipit tortor, sed hendrerit ipsum ultricies eu. </p>
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="clearfix"></div>
+
+	    </div>
+
+	</div>
+
+</div>
 
 <div class="strip strip-alt pricing" id="pricing">
 
