--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
 		        	<h2>Go <span>&amp; Global</span></h2>
 
-		        	<h4>Co-operative honey productiona nd supply to the world.</h4>
+		        	<h4>Co-operative honey production &amp; supply to the world.</h4>
 
 		        	<p>Mauris vehicula tortor id augue rutrum consequat ac at massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus bibendum urna pellentesque urna ultrices porttitor. Sed ac leo id odio fringilla venenatis. Morbi vel turpis luctus diam ultrices adipiscing. Vestibulum feugiat suscipit tortor, sed hendrerit ipsum ultricies eu. </p>
 
