--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 
 	        		<span class="glyph-item mega icon-users" aria-hidden="true"></span>
 
-		        	<h3>Excellent Support</h3>
-		        	<p>Access to experienced beekeepers forums and support for your Hive Sensors</p>
+		        	<h3>Sell your honey co-operatively</h3>
+		        	<p>Join our drive to get great locally produced honey into the global market and generate a revenue</p>
 
 		        </div>
 
