--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
 	        	<div class="inner inner-text">
 
-		        	<h2>Go <span>&amp; Global</span></h2>
+		        	<h2>Global <span>Co-operative Honey supply</span></h2>
 
 		        	<h4>Co-operative honey production &amp; supply to the world.</h4>
 
