updated HiveEmpireSense to HiveEmpire0Sense

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 							<li><a href="/">Home</a></li>
 							<li><a href="/about.html">About</a></li>
 							<li><a href="/blog/">Blog</a></li>
-							<li><a href="/index.html#buy">Buy <b>HiveEmpireSense&#8482;</b></a></li>
-							<li><a href="/index.html#pricing">Buy <b>HiveEmpireSense&#8482;</b></a></li>
+							<li><a href="/index.html#buy">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
+							<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
 							<li class="current"><a href="">Download App</a></li>
 						</ul>
 					</div>
@@ -181,7 +181,7 @@
 
 		        	<h3>Simple</h3>
 		        	<p><b>1.</b> Place sensors.<br/>
-		        	<b>2.</b> Turn on the <em><b>HiveEmpireSense&#8482;</b></em> and connect to the internet.<br/>
+		        	<b>2.</b> Turn on the <em><b>HiveEmpire-Sense&#8482;</b></em> and connect to the internet.<br/>
 		        	<b>3.</b> Know your Hive</p>
 
 		        </div>
@@ -311,7 +311,7 @@
 
 	        	<div class="inner inner-text">
 
-		        	<h2>Buy <span>HiveEmpireSense&#8482;</span></h2>
+		        	<h2>Buy <span>HiveEmpire-Sense&#8482;</span></h2>
 
 		        	<h4>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </h4>
 
@@ -388,7 +388,7 @@
 		    	<div class="inner secondary">
 		    		<ul>
 						<li><h2>Starter Kit</h2></li>
-						<li class="price"><h1><span>$ </span><strong>150</strong><small><br/>1x HiveEmpireSense™ &amp; sensors</small></h1></li>
+						<li class="price"><h1><span>$ </span><strong>150</strong><small><br/>1x HiveEmpire-Sense™ &amp; sensors</small></h1></li>
 						<li>1 month free</li>
 						<li>1x Temperature &amp; Humidity Sensor</li>
 						<li>4x Weight Sensors</li>
@@ -419,7 +419,7 @@
 		    	<div class="inner secondary">
 
 		    		<ul>
-						<li><h2>HiveEmpireSense™ Device</h2></li>
+						<li><h2>HiveEmpire-Sense™ Device</h2></li>
 						<li class="price"><h1><span>$ </span><strong>150</strong></h1></li>
 						<li>Power cable</li>
 						</ul>
