--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
 	        		<span class="glyph-item mega icon-screen-smartphone" aria-hidden="true"></span>
 
 		        	<h3>Smart &amp; Fun</h3>
-		        	<p>Our Mobile and web app HiveEmpire&#8482;, gives you direct and simple access to the hive data and streaming video. HiveEmpire will let you know when important events are due and provide you with contact to people who know</p>
+		        	<p>Our Mobile and web app HiveEmpire&#8482;, gives you direct and simple access to the hive data and streaming video.</p>
+		        	<p>HiveEmpire will let you know when important events are due and provide you with contact to people who know.</p>
 
 		        </div>
 
@@ -208,8 +209,9 @@
 
 	        		<span class="glyph-item mega icon-users" aria-hidden="true"></span>
 
-		        	<h3>Sell your honey co-operatively</h3>
+		        	<h3>Sell your hive's honey co-operatively</h3>
 		        	<p>Join our drive to get great locally produced honey into the global market and generate a revenue</p>
+		        	<p>The Co-oprative part of HiveEmpire also lets you get support and even concierge management of your hives, freeing you up to focus on other matters.</p>
 
 		        </div>
 
@@ -235,10 +237,8 @@
 	        	<div class="inner inner-text">
 
 		        	<h2>Know <span>your Hive</span></h2>
-
-		        	<h4>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </h4>
-
-		        	<p>Mauris vehicula tortor id augue rutrum consequat ac at massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus bibendum urna pellentesque urna ultrices porttitor. Sed ac leo id odio fringilla venenatis. Morbi vel turpis luctus diam ultrices adipiscing. Vestibulum feugiat suscipit tortor, sed hendrerit ipsum ultricies eu. </p>
+		        	<h4>The best part of bee-keeping is gettign to know your hive its bees and of course your Queens</h4>
+		        	<p>HiveEmpire aims to get you even closer to this process and give you 24 hour monitoring and low-impact monitoring, thus giving your bees the space they need to do their thing but also giving you precise real-time data.</p>
 
 		        </div>
 
@@ -283,10 +283,9 @@
 	        	<div class="inner inner-text">
 
 		        	<h2>Connect <span>&amp; Engage</span></h2>
-
-		        	<h4>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </h4>
-
-		        	<p>Mauris vehicula tortor id augue rutrum consequat ac at massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus bibendum urna pellentesque urna ultrices porttitor. Sed ac leo id odio fringilla venenatis. Morbi vel turpis luctus diam ultrices adipiscing. Vestibulum feugiat suscipit tortor, sed hendrerit ipsum ultricies eu. </p>
+		        	<h4>At HiveEmpire we believe in networks and connecting people.</h4>
+		        	<p>We are building a large support network and access to knowledge and resources you would normally take years to build and manage.</p>
+		        	<p>We also believe in the power of co-operative production and with your help will be leading the charge into pure honey supply into the worlds markets.</p>
 
 		        </div>
 
@@ -312,10 +311,10 @@
 	        	<div class="inner inner-text">
 
 		        	<h2>Buy <span>HiveEmpire-Sense&#8482;</span></h2>
-
-		        	<h4>Phasellus consequat facilisis volutpat ma faucibus odio vitae semper. Ae volutpat lobortis. </h4>
-
-		        	<p>Mauris vehicula tortor id augue rutrum consequat ac at massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus bibendum urna pellentesque urna ultrices porttitor. Sed ac leo id odio fringilla venenatis. Morbi vel turpis luctus diam ultrices adipiscing. Vestibulum feugiat suscipit tortor, sed hendrerit ipsum ultricies eu. </p>
+		        	<h4>Buy one HiveEmpire-Sense&#8482; and its sensors via the starter-pack</h4>
+		        	<p>But of course you can buy replacements too.</p>
+		        	<p>Remember 1 HiveEmpire-Sense&#8482; can run as many sensors as you like (tho we do recommend a max of 50)</p>
+		        	<p>We are constantly thinking of new sensors to add to the set and are happy to take special requests</p>
 
 		        </div>
 
