--- a/index.html
+++ b/index.html
@@ -399,27 +399,12 @@
 		    	</div>
 		  </div>
 
-		</div>
-
-		<div class="row blocks">
-
-			<div class="span4">
-		    	<div class="inner secondary">
-		    		<ul>
-						<li><h2>App Access</h2></li>
-						<li class="price"><h1><span>$ </span><strong>12</strong><small> per month</small></h1></li>
-						</ul>
-
-						<a href="/" class="btn">Buy Now</a>
-		    	</div>
-		  </div>
-
 			<div class="span4">
 		    	<div class="inner secondary">
 
 		    		<ul>
-						<li><h2>HiveEmpire-Sense™ Device</h2></li>
-						<li class="price"><h1><span>$ </span><strong>150</strong></h1></li>
+						<li><h2>Replacement HiveEmpire-Sense™ Device</h2></li>
+						<li class="price"><h1><span>$ </span><strong>120</strong></h1></li>
 						<li>Power cable</li>
 						</ul>
 
