--- a/index.html
+++ b/index.html
@@ -387,8 +387,9 @@
 		    	<div class="inner secondary">
 		    		<ul>
 						<li><h2>Starter Kit</h2></li>
-						<li class="price"><h1><span>$ </span><strong>150</strong><small><br/>1x HiveEmpire-Sense™ &amp; sensors</small></h1></li>
-						<li>1 month free, $12 per month thereafter</li>
+						<li class="price"><h1><span>$ </span><strong>150</strong></h1></li>
+						<li>1x HiveEmpire-Sense™ &amp; sensor pack</li>
+						<li>1 month app access free, $12 per month thereafter</li>
 						<li>1x Temperature &amp; Humidity Sensor</li>
 						<li>4x Weight Sensors</li>
 						<li>1x In/Out Counter</li>
