--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 							<li><a href="/">Home</a></li>
 							<li><a href="/about.html">About</a></li>
 							<li><a href="/blog/">Blog</a></li>
-							<li><a href="/index.html#buy">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
+							<li><a href="/index.html#buy">Sign Up</a></li>
+							<li><a href="/index.html#buy">Sign In</a></li>
 							<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
 							<li class="current"><a href="">Download App</a></li>
 						</ul>
@@ -130,7 +131,7 @@
 								        <textarea name="message" id="message" required=""  placeholder="Message"></textarea>
 								    </div>
 									<div class="form-row">
-								        <input id="submit" type="submit" name="submit" value="Sign up now!" class="btn"> <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a>
+								        <input id="submit" type="submit" name="submit" value="Send" class="btn"> <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a>
 								    </div>
 								</form>
 
@@ -347,9 +348,7 @@
 	    	<div class="span6">
 
 	        	<div class="inner">
-
 		        	<img src="pictures/mobile-inline.png" alt="Desktop" class="promoimg" />
-
 		        </div>
 
 	    	</div>
@@ -357,13 +356,9 @@
 	    	<div class="span6">
 
 	        	<div class="inner inner-text">
-
 		        	<h2>Global <span>Co-operative Honey supply</span></h2>
-
 		        	<h4>Co-operative honey production &amp; supply to the world.</h4>
-
-		        	<p>Mauris vehicula tortor id augue rutrum consequat ac at massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus bibendum urna pellentesque urna ultrices porttitor. Sed ac leo id odio fringilla venenatis. Morbi vel turpis luctus diam ultrices adipiscing. Vestibulum feugiat suscipit tortor, sed hendrerit ipsum ultricies eu. </p>
-
+		        	<p>Once your hive is producing honey and you have learned the basics, you can then become a honey supplier and contribute to the co-operative supply of raw honey from local producers in your area.</p>
 		        </div>
 
 	    	</div>
