--- a/index.html
+++ b/index.html
@@ -181,9 +181,11 @@
 	        		<span class="glyph-item mega icon-emoticon-smile" aria-hidden="true"></span>
 
 		        	<h3>Simple</h3>
-		        	<p><b>1.</b> Place sensors.<br/>
-		        	<b>2.</b> Turn on the <em><b>HiveEmpire-Sense&#8482;</b></em> and connect to the internet.<br/>
-		        	<b>3.</b> Know your Hive</p>
+		        	<p>
+		        	  <b>1.</b> Place sensors.<br/>
+		        	  <b>2.</b> Turn on the <em><b>HiveEmpire-Sense&#8482;</b></em> and connect to the internet.<br/>
+		        	  <b>3.</b> Know your Hive
+		        	</p>
 
 		        </div>
 
@@ -236,11 +238,9 @@
 	    	<div class="span6">
 
 	        	<div class="inner inner-text">
-
 		        	<h2>Know <span>your Hive</span></h2>
-		        	<h4>The best part of bee-keeping is gettign to know your hive its bees and of course your Queens</h4>
-		        	<p>HiveEmpire aims to get you even closer to this process and give you 24 hour monitoring and low-impact monitoring, thus giving your bees the space they need to do their thing but also giving you precise real-time data.</p>
-
+		        	<h4>The best part of bee-keeping is getting to know your hive its bees and of course the Queen</h4>
+		        	<p>HiveEmpire aims to get you even closer to this process and give you 24 hour but low-impact monitoring, thus giving your bees the space they need to do their thing but also giving you precise real-time data.</p>
 		        </div>
 
 	    	</div>
