--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div id="menu">
 						<ul>
 							<li><a href="/">Home</a></li>
-							<li><a href="/about.html">About</a></li>
+							<li><a href="/site/about.html">About</a></li>
 							<li><a href="/blog/">Blog</a></li>
 							<li><a href="/index.html#buy">Sign Up</a></li>
 							<li><a href="/index.html#buy">Sign In</a></li>
@@ -80,7 +80,7 @@
 	        			<h1>Know your Hive</h1>
 								<h2>Hive Empire - Complete Beehive Monitoring.</h2>
 
-						<a href="#pricing" class="btn btn-primary">Pricing</a> <a href="/docs/" class="btn btn-secondary">Documentation</a>
+						<a href="#pricing" class="btn btn-primary">Pricing</a> <a href="/site/" class="btn btn-secondary">Documentation</a>
 
 						</div>
 
