--- a/site/new-sense-setup/index.html
+++ b/site/new-sense-setup/index.html
@@ -132,7 +132,7 @@
 </ol>
 <h2 id="at-hive-empirecom">At Hive-Empire.com</h2>
 <ol>
-<li>Login to http://hive-empire.com</li>
+<li>Login to http://app.hive-empire.com</li>
 <li>Create a HiveEmpire-Sense object, you will be asked to enter your device serial (found on the side of the device)</li>
 <li>Create a new Hive</li>
 <li>Associate the Hive with the HiveEmpire-Sense device via the "Devices" field.</li>
