reworked docs mkdocs settings

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 					<div id="menu">
 						<ul>
 							<li><a href="/">Home</a></li>
-							<li><a href="/site/about.html">About</a></li>
-							<li><a href="/blog/">Blog</a></li>
-							<li><a href="/index.html#buy">Sign Up</a></li>
-							<li><a href="/index.html#buy">Sign In</a></li>
+							<li><a href="/about.html">About</a></li>
+							<li><a href="https://hiveempireblog.wordpress.com">Blog</a></li>
+							<li><a href="/docs/">Get Started</a></li>
+							<li><a href="https://app.hive-empire.com/sign-up/">Sign Up</a></li>
+							<li><a href="https://app.hive-empire.com/sign-in/">Sign In</a></li>
 							<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
 							<li class="current"><a href="">Download App</a></li>
 						</ul>
@@ -80,7 +81,7 @@
 	        			<h1>Know your Hive</h1>
 								<h2>Hive Empire - Complete Beehive Monitoring.</h2>
 
-						<a href="#pricing" class="btn btn-primary">Pricing</a> <a href="/site/" class="btn btn-secondary">Documentation</a>
+						<a href="#pricing" class="btn btn-primary">Pricing</a> <a href="/docs/" class="btn btn-secondary">Get Started</a>
 
 						</div>
 
