--- a/index.html
+++ b/index.html
@@ -437,12 +437,13 @@
 <div id="footer">
 
 	<p>
-		<a href="/"><span class="glyph-item mega icon-social-youtube" aria-hidden="true"></span></a>
-		<a href="/"><span class="glyph-item mega icon-social-twitter" aria-hidden="true"></span></a>
-		<a href="/"><span class="glyph-item mega icon-social-tumblr" aria-hidden="true"></span></a>
+<!-- 		<a href="/"><span class="glyph-item mega icon-social-youtube" aria-hidden="true"></span></a> -->
+		<a target="_NEW" href="https://twitter.com/hiveempireapp"><span class="glyph-item mega icon-social-twitter" aria-hidden="true"></span></a>
+		<a target="_NEW" href="https://hiveempireapp.wordpress.com"><span class="glyph-item mega icon-social-wordpress" aria-hidden="true"></span></a>
+<!-- 		<a href="/"><span class="glyph-item mega icon-social-tumblr" aria-hidden="true"></span></a>
 		<a href="/"><span class="glyph-item mega icon-social-facebook" aria-hidden="true"></span></a>
 		<a href="/"><span class="glyph-item mega icon-social-dropbox" aria-hidden="true"></span></a>
-		<a href="/"><span class="glyph-item mega icon-social-dribbble" aria-hidden="true"></span></a>
+		<a href="/"><span class="glyph-item mega icon-social-dribbble" aria-hidden="true"></span></a> -->
 	</p>
 
 	Copyright &copy; 2014
