--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -188,25 +188,28 @@
 		        	<h3>Small</h3>
 		        	<p>In Germany, 80% of beekeepers have between 1 &amp; 20 individual hives.</p>
 							<ul class="list-group">
-									<li class="list-group-item"><b>device:</b>$150.00 x 88,000: <b>$13,200,000</b><br/><em>(1% 1100, $165,000)</em></li>
-									<li class="list-group-item"><b>subscription:</b>$12.00 x 12 months x 88,000: <b>$12,672,000</b><br/><em>(1% 1100, $158,400)</em></li>
-									<li class="list-group-item"><b>s-pack:</b> $80.00 x 2 x 88,000: <b>$14,080,000</b><br/><em>(1% 1100, $158,400)</em></li>
+									<li class="list-group-item"><b>device:</b>$150.00 x 88,000: <b>$13,200,000</b><br/><em>(1% 880, $132,000)</em></li>
+									<li class="list-group-item"><b>subscription:</b>$12.00 x 12 months x 88,000: <b>$12,672,000</b><br/><em>(1% 880, $253,440)</em></li>
+									<li class="list-group-item"><b>s-pack:</b> $80.00 x 2 x 88,000: <b>$14,080,000</b><br/><em>(1% 880, $140,800)</em></li>
+									<li class="list-group-item"><b>total:</b><b>$39,952,000</b><br/><em>(1% 22, $526,240)</em></li>
 							</ul>
 
 		        	<h3>Medium</h3>
 		        	<p>while, 18% of beekeepers have between 21 &amp; 50 individual hives.</p>
 							<ul class="list-group">
-									<li class="list-group-item"><b>device:</b>$150.00 x 19,800: <b>$2,970,000</b><br/><em>(1% 1100, $165,000)</em></li>
-									<li class="list-group-item"><b>subscription:</b>$24.00 x 12 months x 19,800: <b>$15,840,000</b><br/><em>(1% 1100, $158,400)</em></li>
-									<li class="list-group-item"><b>s-pack:</b>$80.00 x 30 x 2,200: <b>$5,280,000</b><br/><em>(1% 1100, $158,400)</em></li>
+									<li class="list-group-item"><b>device:</b>$150.00 x 19,800: <b>$2,970,000</b><br/><em>(1% 198, $59,400)</em></li>
+									<li class="list-group-item"><b>subscription:</b>$24.00 x 12 months x 19,800: <b>$15,840,000</b><br/><em>(1% 198, $57,024)</em></li>
+									<li class="list-group-item"><b>s-pack:</b>$80.00 x 30 x 2,200: <b>$5,280,000</b><br/><em>(1% 198, $348,480)</em></li>
+									<li class="list-group-item"><b>total:</b><b>$24,090,000</b><br/><em>(1% 22, $464,904)</em></li>
 							</ul>
 
 		        	<h3>Large</h3>
 		        	<p>with, 2% of beekeepers with 50 or more individual hives.</p>
 							<ul class="list-group">
-									<li class="list-group-item"><b>device:</b>$150.00 x 2 x 2,200: <b>$660,000</b><br/><em>(1% 1100, $165,000)</em></li>
-									<li class="list-group-item"><b>subscription:</b>$49.00 x 12 months x 2,200: <b>$1,293,600</b><br/><em>(1% 1100, $158,400)</em></li>
-									<li class="list-group-item"><b>s-pack:</b>$80.00 x 80 x 2,200: <b>$14,080,000</b><br/><em>(1% 1100, $158,400)</em></li>
+									<li class="list-group-item"><b>device:</b>$150.00 x 2 x 2,200: <b>$660,000</b><br/><em>(1% 22, $6,600)</em></li>
+									<li class="list-group-item"><b>subscription:</b>$49.00 x 12 months x 2,200: <b>$1,293,600</b><br/><em>(1% 22, $12,936)</em></li>
+									<li class="list-group-item"><b>s-pack:</b>$80.00 x 80 x 2,200: <b>$14,080,000</b><br/><em>(1% 22, $140,800)</em></li>
+									<li class="list-group-item"><b>total:</b><b>$16,033,600</b><br/><em>(1% 22, $160,336)</em></li>
 							</ul>
 
 		        </div>
