--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -92,43 +92,18 @@
 
 	        				<div class="top">
 
-		        				<h2><span class="glyph-item  icon-pencil" aria-hidden="true"></span> Get in touch</h2>
-		        				<p>Should you have comments or questions, please complete the form below and hit submit; we promise to get back to you as soon as possible.</p>
+		        				<h2><span class="glyph-item  icon-pencil" aria-hidden="true"></span> HiveEmpire - the potentials</h2>
+		        				<p><b>The problem:</b> Is a bringing imperic data to very opaque process. And making "ownership" a tangible real-time feeling for bee-keepers who would normally have to wait weeks for feedback and results.</p>
+		        				<p><b>Our solution:</b> Bring a non-invasive, monitoring system that collects and provides data in real-time as well as expose the inner workings of the hive to bee-keepers. Enhancing the sense of ownership. As well as bringing light and difficult to acquire knowledge to an ancient passtime and providing a sense of direction which is otherwise a blocker to all new beekeepers.</p>
+		        				<p><b>Other Markets</b> There exists a potential to monetize and create a co-operative platform for the production and distribution of honey and thus tap into emerging organic locally produced oriented consumers.</p>
 
 	        				</div>
 
 	        				<div class="bottom">
-
-								<div id="success">
-								    <span class="green textcenter">
-								        <p>Your message was sent successfully!</p>
-								    </span>
-								</div>
-
-								<div id="error">
-								    <span>
-								        <p>Something went wrong. Please refresh and try again.</p>
-								    </span>
-								</div>
-
-								<form id="contact" name="contact" method="post" novalidate="novalidate">
-
-									<div class="form-row">
-								        <input type="text" name="name" id="name" size="30" value="" required="" class="text login_input"  placeholder="Your name">
-								    </div>
-									<div class="form-row">
-								        <input type="text" name="email" id="email" size="30" value="" required="" class="text login_input"  placeholder="Email Address">
-								    </div>
-									<div class="form-row">
-								        <input type="text" name="phone" id="phone" size="30" value="" class="text login_input"  placeholder="Phone Number (Optional)">
-								    </div>
-									<div class="form-row">
-								        <textarea name="message" id="message" required=""  placeholder="Message"></textarea>
-								    </div>
-									<div class="form-row">
-								        <input id="submit" type="submit" name="submit" value="Send" class="btn"> <a href="/">Privacy Policy</a> | <a href="/">Terms &amp; Conditions</a>
-								    </div>
-								</form>
+										<h2>100% Market saturation</h2>
+										<p>Yearly value: <b>$80,075,600</b></p>
+										<h2>1% Market saturation</h2>
+										<p>Yearly value: <b>$1,151,480</b></p>
 
 							</div>
 
