--- a/pitch-deck.html
+++ b/pitch-deck.html
@@ -101,9 +101,12 @@
 
 	        				<div class="bottom">
 										<h2>100% Market saturation</h2>
-										<p>Yearly value: <b>$80,075,600</b></p>
+										<p>value: <b>$80,075,600</b></p>
+										<p>Yearly revenue: <b>$29,805,600</b></p>
+
 										<h2>1% Market saturation</h2>
-										<p>Yearly value: <b>$1,151,480</b></p>
+										<p>value: <b>$1,151,480</b></p>
+										<p>Yearly revenue: <b>$323,400</b></p>
 
 							</div>
 
